[package]
authors = ["Kristoffer Larsen Hopland"]
name = "norwegian-tin-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/khopland/norwegian-tin-validator"
description = "A Norwegian TIN (Tax Identification Number) validator library"
keywords = ["validator", "norwegian", "tin", "d-number", "f-number", "fødselsnummer", "personnummer"]
[dependencies]
