[package]
authors = ["Kristoffer Larsen Hopland"]
name = "norwegian-tin-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/khopland/norwegian-tin-validator"
description = "A Norwegian TIN (Tax Identification Number) validator library"
keywords = ["id-validator", "norwegian", "tin", "id", "fnr"]
[dependencies]
